# genarena

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: README.md  architecture.md  cli-reference.md  experiments.md  faq.md  quickstart.md
docs/maintainer-guide/: README.md  deploy.md
genarena/: __init__.py  __main__.py  arena.py  battle.py  bt_elo.py  cli.py  data.py  experiments.py  leaderboard.py  logs.py  models.py  sampling.py  state.py  utils.py  vlm.py
genarena/deploy/: Dockerfile  README.md  __init__.py  app.py
genarena/prompts/: __init__.py  mmrb2.py
genarena/sync/: __init__.py  auto_commit.py  deploy_ops.py  git_ops.py  hf_ops.py  init_ops.py  integrator.py  packer.py  submit.py
genarena/validation/: __init__.py  schema.py  validator.py
genarena/visualize/: README.md  __init__.py  app.py  data_loader.py
genarena/visualize/static/: app.js  model_aliases.json  style.css
genarena/visualize/templates/: index.html
submissions-repo-template/: CONTRIBUTING.md  README.md  official_models.json
submissions-repo-template/.github/: PULL_REQUEST_TEMPLATE.md
submissions-repo-template/.github/workflows/: integrate-submission.yml  validate-submission.yml
submissions-repo-template/scripts/: integrate_submission.py  validate_submission.py
submissions-repo-template/submissions/approved/: .gitkeep
submissions-repo-template/submissions/pending/: .gitkeep
submissions-repo-template/submissions/rejected/: .gitkeep
